ipc/ipdl/test/ipdl/ok/PDelete.ipdl
include protocol PDeleteSub;

sync protocol PDelete {
    manages PDeleteSub;

child:
    async PDeleteSub();
};
