ipc/ipdl/test/ipdl/error/undeclProtocol.ipdl
protocol undeclProtocol {
    manages undeclared;

child:
    undeclared();
    ~undeclared();
};
